Set upstream and use DNS resolver

--- a/proxy/proxy.conf
+++ b/proxy/proxy.conf
@@ -2,9 +2,14 @@ server {
   # Proxy server will listen to this port
   listen 3110;
 
+  # DNS resolver to handle multiple containers efficiently
+  # valid parameter allows the cache time to be overridden (default is 300s)
+  resolver 127.0.0.11 valid=5s;
+  set $upstream http://app:3110;
+
   location / {
     # All the requests on above port will be forwarded
     # to the web-server running in the app container
-    proxy_pass http://app:3110;
+    proxy_pass $upstream;
   }
 }
