Add maintainer label in nginx Dockerfile

--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,5 +1,8 @@
-# Use NGINX from the Alpine Linux project 
+# Use NGINX from the Alpine Linux project
 FROM nginx:alpine
+
+# Add label for metadata
+LABEL maintainer="Nisarg Patel <https://nisarg73.github.io/>"
 
 # Remove all default nginx site-specific configurations from the container
 RUN rm /etc/nginx/conf.d/*
